# litepad

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
installer/: litepad.iss
src/: app.rs  config.rs  fonts.rs  main.rs  markup.rs  storage.rs  theme.rs  updates.rs
website/: index.html  robots.txt  sitemap.xml
