[package]
name = "litepad"
version = "0.1.0"
edition = "2021"
description = "A bloat-free, fast, zero-telemetry notepad for Windows."
authors = ["LitePad"]

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = "0.29"
dirs = "5"
rfd = "0.15"

# Embeds the application icon into the Windows .exe (build-time only).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# A small, fast release binary. No network crates anywhere => zero telemetry.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
