[package]
name = "litepad"
version = "0.2.0"
edition = "2021"
description = "A bloat-free, fast, zero-telemetry notepad for Windows."
authors = ["Yash Pandey"]
license = "MIT"
repository = "https://github.com/yashpandey0031/litepad"

[dependencies]
eframe = { version = "0.29", default-features = true }
egui = "0.29"
dirs = "5"
rfd = "0.15"

# The *only* network code in LitePad, and it runs solely when the user clicks
# "Check for updates" — see src/updates.rs. Blocking, so no async runtime tags
# along; native-tls so Windows' own schannel does the TLS rather than us shipping
# a second crypto stack (rustls costs ~1.3 MB of binary, schannel costs ~0).
ureq = { version = "2", default-features = false, features = ["json", "native-tls", "gzip"] }
native-tls = "0.2"
serde_json = "1"

# Embeds the application icon into the Windows .exe (build-time only).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# A small, fast release binary. No network crates anywhere => zero telemetry.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
